refactor thumbnail caption

--- a/docs/layouts/partials/parts/thumbnail.html
+++ b/docs/layouts/partials/parts/thumbnail.html
@@ -134,3 +134,28 @@
 <img class="thumbnail large frame" src="img/thumbnail_01.jpg" width="90" alt="person"/>
 <img class="thumbnail big frame" src="img/thumbnail_01.jpg" width="120" alt="person"/>
 <!--<img class="thumbnail free circle" src="img/thumbnail_01.jpg" width="160" alt="person"/>-->
+
+<h4 class="title">サイズ Caption</h4>
+
+<p class="thumbnail mini caption">
+  <img src="img/thumbnail_01.jpg" width="30" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail small caption">
+  <img src="img/thumbnail_01.jpg" width="45" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail caption">
+  <img src="img/thumbnail_01.jpg" width="60" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail large caption">
+  <img src="img/thumbnail_01.jpg" width="90" alt="person"/>
+  <span class="title">title</span>
+</p>
+<p class="thumbnail big caption">
+  <img src="img/thumbnail_01.jpg" width="120" alt="person"/>
+  <span class="title">title</span>
+</p>
+<!--<p class="thumbnail free circle"><img src="img/thumbnail_01.jpg" width="160" alt="person"/></p>-->
+
