--- a/docs/layouts/partials/parts/form.html
+++ b/docs/layouts/partials/parts/form.html
@@ -5,10 +5,71 @@
 <p class="input"><input type="radio" checked></p>
 <p class="input"><input type="radio" disabled checked></p>
 
+<h3 class="title">ラジオボタン</h3>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<input type="radio">
+<input type="radio" checked>
+<input type="radio" disabled checked>
+
+<h3 class="title">チェックボックス</h3>
+
+<input type="checkbox">
+<input type="checkbox" checked>
+<input type="checkbox" disabled checked>
+
+<h4 class="title">チェックボックス カラー</h4>
+<input type="checkbox">
+<input type="checkbox" checked>
+<input type="checkbox" disabled checked>
+
+<input class="primary" type="checkbox">
+<input class="primary" type="checkbox" checked>
+<input class="primary" type="checkbox" disabled checked>
+
+<input class="blue" type="checkbox">
+<input class="blue" type="checkbox" checked>
+<input class="blue" type="checkbox" disabled checked>
+
+<input class="green" type="checkbox">
+<input class="green" type="checkbox" checked>
+<input class="green" type="checkbox" disabled checked>
+
+<input class="orange" type="checkbox">
+<input class="orange" type="checkbox" checked>
+<input class="orange" type="checkbox" disabled checked>
+
+<input class="red" type="checkbox">
+<input class="red" type="checkbox" checked>
+<input class="red" type="checkbox" disabled checked>
+<br/>
+<br/>
+
+<h4 class="title">チェックボックス サイズ</h4>
+
+
+
 <input type="text" value="テキスト"/>
 <input type="checkbox"/>
 <input type="search"/>
 <input type="radio"/>
+
+<h3 class="title">セレクト</h3>
 
 <p class="input">
     <select name="" id="">
