--- a/docs/layouts/parts/single.html
+++ b/docs/layouts/parts/single.html
@@ -1,6 +1,42 @@
-{{ partial "header.html" . }}
-<section id="top">
-  <div class="container">
+{{ partial "header_docs.html" . }}
+
+<div id="corePage" class="site-content">
+  <nav>
+    {{ with .Params.categories }}
+    <div>Categories:{{ range . }} <a href="/categories/{{ . }}/">{{ . }}</a>{{ end }}</div>
+    {{ end }}
+    {{ with .Params.tags }}
+    <div>Tags:{{ range . }} <a href="/tags/{{ . }}/">#{{ . }}</a>{{ end }}</div>
+    {{ end }}
+
+    {{ range .Data.Pages }}
+    <li>
+      <a href="{{ .Permalink }}">{{ .Title }}</a>
+    </li>
+    {{ end }}
+  </nav>
+
+  <!--<div class="sideMenu docs">-->
+    <!--<h3>JavaScript</h3>-->
+    <!--<ul class="navList">-->
+      <!--{{ with .Section }}-->
+      <!--<li class="title">BASE</li>-->
+      <!--<li><a href="/{{ . }}/button/">Button</a></li>-->
+      <!--<li><a href="/{{ . }}/modalwindow/">ModalWindow</a></li>-->
+      <!--<li><a href="/{{ . }}/tab/">Tab</a></li>-->
+      <!--<li><a href="/{{ . }}/switcher/">Switcher</a></li>-->
+      <!--<li><a href="/{{ . }}/toggle/">Toggle</a></li>-->
+      <!--<li><a href="/{{ . }}/sidemenu/">SideMenu</a></li>-->
+      <!--<li><a href="/{{ . }}/smoothscroll/">SmoothScroll</a></li>-->
+      <!--<li><a href="/{{ . }}/dropdown/">Dropdown</a></li>-->
+      <!--<li><a href="/{{ . }}/scrollspy/">ScrollSpy</a></li>-->
+      <!--{{ end }}-->
+    <!--</ul>-->
+  <!--</div>-->
+
+    {{ .Content }}
+
+    <div class="container">
 
     <h2 class="title">ボタン (Wrap Style)</h2>
     {{ partial "parts/btn.html" . }}
@@ -201,9 +237,13 @@
       <!--&lt;!&ndash; #content &ndash;&gt;-->
     <!--</div>-->
     <!-- #primary -->
-  </div>
-  <!-- #main-content -->
-</section>
+    </div>
+
+    {{ partial "footer.html" . }}
+
+    <div class="author">{{ .Params.author }}</div>
+    <p class="times docs"><time pubdate="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "2006-01-02" }}</time></p>
+</div>
 
 
 {{ partial "footer.html" . }}
