--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -17,6 +17,14 @@ $colorBorderBlue: #3682B6;
 $colorBorderOrange: #CB8618;
 $colorBorderRed: #DD8177;
 
+$colorHoverDefault: #F5F5F5;
+$colorHoverPrimary: #76828D;
+$colorHoverGreen: #69D3BF;
+$colorHoverBlue: #7BBCE8;
+$colorHoverOrange: #F7BF65;
+$colorHoverRed: #EF8B80;
+
+
 $colorAqua: #0ff;
 
 $linkMainColor: #1397E1;
