--- a/scss/atomic-package/parts/_navigation_menu.scss
+++ b/scss/atomic-package/parts/_navigation_menu.scss
@@ -38,10 +38,12 @@
     display: inline-block;
     min-width: 40px;
     min-height: 40px;
+    border: #EAEAEA 1px solid;
     border-radius: 4px;
     background: $colorDefault;
     box-sizing: border-box;
     vertical-align: top;
+
     a {
       display: block;
       min-width: 40px;
@@ -57,6 +59,7 @@
 
     &.active,
     &:hover {
+      border-color: #30699B;
       background: $colorBlue;
       a {
         color: #fff;
@@ -71,68 +74,63 @@
 
   // skin
   &.primary > li {
+    border-color: $colorBorderPrimary;
     background: $colorPrimary;
     a {
       color: #fff;
     }
     &.active,
     &:hover {
-      background: $colorDefault;
-      a {
-        color: #666;
-      }
+      border-color: $colorBorderPrimary;
+      background: $colorHoverPrimary;
     }
   }
   &.green > li {
+    border-color: $colorBorderGreen;
     background: $colorGreen;
     a {
       color: #fff;
     }
     &.active,
     &:hover {
-      background: $colorDefault;
-      a {
-        color: #666;
-      }
+      border-color: $colorBorderGreen;
+      background: $colorHoverGreen;
     }
   }
   &.blue > li {
+    border-color: $colorBorderBlue;
     background: $colorBlue;
     a {
       color: #fff;
     }
     &.active,
     &:hover {
-      background: $colorDefault;
-      a {
-        color: #666;
-      }
+      border-color: $colorBorderBlue;
+      background: $colorHoverBlue;
     }
   }
   &.orange > li {
+    border-color: $colorBorderOrange;
     background: $colorOrange;
     a {
       color: #fff;
     }
     &.active,
     &:hover {
-      background: $colorDefault;
-      a {
-        color: #666;
-      }
+      border-color: $colorBorderOrange;
+      background: $colorHoverOrange;
     }
   }
   &.red > li {
+    border-color: $colorBorderRed;
     background: $colorRed;
     a {
       color: #fff;
     }
     &.active,
     &:hover {
-      background: $colorDefault;
-      a {
-        color: #666;
-      }
+      border-color: $colorBorderRed;
+      background: $colorHoverRed;
     }
   }
 
