--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -819,7 +819,15 @@ h6.title.big {
 }
 
 .paginationList > li a {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   min-width: 40px;
   min-height: 40px;
   padding: 0 6px;
