--- a/docs/layouts/partials/parts/modalwindow.html
+++ b/docs/layouts/partials/parts/modalwindow.html
@@ -3,7 +3,6 @@
     <p class="modalClose"></p>
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    </div>
   </div>
 </div>
 
@@ -17,12 +16,11 @@
     </p>
   </div>
 </div>
-</div>
 
 <div class="modalWindow">
   <div class="modalDialog">
     <div class="modalHeader">
-      <p class="title">Headline</p>
+      <p class="title modal">Headline</p>
       <p class="close"><i class="icon ap-close"></i></p>
     </div>
     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -36,4 +34,139 @@
   </div>
 </div>
 
+<h3 class="title">モーダルウィンドウ カラー</h3>
 
+<div class="modalWindow">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title modal">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+
+<div class="modalWindow primary">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title modal">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow green">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title modal">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow blue">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title modal">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow orange">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title modal">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow red">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title modal">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<h3 class="title">モーダルウィンドウ サイズ</h3>
+
+<div class="modalWindow mini">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow small">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow large">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow big">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
+
+<div class="modalWindow free">
+  <div class="modalDialog">
+    <div class="modalHeader">
+      <p class="title">Headline</p>
+      <p class="modalClose"></p>
+    </div>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    </p>
+  </div>
+</div>
