--- a/docs/static/css/atomic-package-docs.css
+++ b/docs/static/css/atomic-package-docs.css
@@ -78,6 +78,18 @@
 }
 
 .contents.docs > h2 {
+  margin-bottom: 10px;
   font-size: 36px;
   line-height: 42px;
+}
+
+.contents.docs > h3 {
+  margin-bottom: 10px;
+  font-size: 24px;
+  line-height: 1.5;
+}
+
+.contents.docs > p {
+  margin-bottom: 10px;
+  line-height: 1.6;
 }
