--- a/scss/atomic-package-docs/parts/_list.scss
+++ b/scss/atomic-package-docs/parts/_list.scss
@@ -41,7 +41,17 @@
 
 .contents.docs {
   > h2 {
+    margin-bottom: 10px;
     font-size: 36px;
     line-height: 42px;
+  }
+  > h3 {
+    margin-bottom: 10px;
+    font-size: 24px;
+    line-height: 1.5;
+  }
+  > p {
+    margin-bottom: 10px;
+    line-height: 1.6;
   }
 }
