add nav menu element & style

--- a/docs/layouts/partials/parts/form.html
+++ b/docs/layouts/partials/parts/form.html
@@ -62,7 +62,20 @@
 
 <h4 class="title">チェックボックス サイズ</h4>
 
+<input class="mini" type="checkbox">
+<input class="small" type="checkbox">
+<input type="checkbox">
+<input class="large" type="checkbox">
+<input class="big" type="checkbox">
 
+<br/>
+<br/>
+
+<p class="input mini"><input type="checkbox"></p>
+<p class="input small"><input type="checkbox"></p>
+<p class="input"><input type="checkbox"></p>
+<p class="input large"><input type="checkbox"></p>
+<p class="input big"><input type="checkbox"></p>
 
 <input type="text" value="テキスト"/>
 <input type="checkbox"/>
