--- a/docs/layouts/partials/parts/menu.html
+++ b/docs/layouts/partials/parts/menu.html
@@ -1,5 +1,66 @@
+<h4>ナビバー</h4>
 <nav class="navBar">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
 
+<nav class="navBar">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+
+  <ul class="navBarList right">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar">
+  <ul class="navBarList">
+    <li class="active">
+      <a href=""><i class="icon ap-home"></i> Home<span class="title sub">subTitle</span></a>
+    </li>
+    <li><a href="">Item<span class="title sub">subTitle</span></a></li>
+    <li><a href="">Item<span class="title sub">subTitle</span></a></li>
+  </ul>
+  <div class="box"><a href="">Link</a></div>
+  <div class="box">
+    <div class="searchBox">
+      <p class="input"><input type="search"></p>
+      <p class="btn"><a href="">検索</a></p>
+    </div>
+  </div>
+  <div class="box right">
+    <ul class="btnList">
+      <li class="btn primary"><a href="">Btn</a></li>
+      <li class="btn blue"><a href="">Btn</a></li>
+    </ul>
+  </div>
+</nav>
+
+<nav class="navBar">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+  <div class="box center">
+    <div class="searchBox">
+      <p class="input"><input type="search"></p>
+      <p class="btn"><a href="">検索</a></p>
+    </div>
+  </div>
+  <div class="box right">
+    <ul class="btnList">
+      <li class="btn blue mini"><a href="">Btn</a></li>
+    </ul>
+  </div>
 </nav>
 
 <nav class="menu">
@@ -21,6 +82,95 @@
 
 <br/>
 <br/>
+<h4>ナビバー サイズ</h4>
+<nav class="navBar mini">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar small">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar large">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar big">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<h4>ナビバー カラー</h4>
+<nav class="navBar">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar primary">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar green">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar blue">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar orange">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
+
+<nav class="navBar red">
+  <ul class="navBarList">
+    <li class="active"><a href="">Active</a></li>
+    <li><a href="">Item</a></li>
+    <li><a href="">Item</a></li>
+  </ul>
+</nav>
 
 <h4>ナビメニュー</h4>
 
@@ -162,4 +312,65 @@
   <li class="active"><a href="">Active</a></li>
   <li><a href="">Item</a></li>
   <li><a href="">Item</a></li>
+</ul>
+
+
+<h4>サブナビリスト</h4>
+
+<ul class="subNavList">
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<ul class="subNavList">
+  <li class="active"><a href="">list</a></li>
+  <li class="active"><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<ul class="subNavList">
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<h4>サブナビリスト サイズ</h4>
+
+<ul class="subNavList">
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<ul class="subNavList">
+  <li class="active"><a href="">list</a></li>
+  <li class="active"><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<ul class="subNavList">
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<h4>サブナビリスト カラー</h4>
+
+<ul class="subNavList">
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<ul class="subNavList">
+  <li class="active"><a href="">list</a></li>
+  <li class="active"><a href="">list</a></li>
+  <li><a href="">list</a></li>
+</ul>
+
+<ul class="subNavList">
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
+  <li><a href="">list</a></li>
 </ul>
