--- a/docs/layouts/partials/parts/btn.html
+++ b/docs/layouts/partials/parts/btn.html
@@ -86,7 +86,14 @@
 <h2>ドロップダウン</h2>
 
 <div class="dropdown">
-    <a class="btn" href="">DropDown</a>
+  <a class="btn" href="">DropDown</a>
+  <div class="navBox">
+    <ul class="navList">
+      <li><a href="">DropDown Menu</a></li>
+      <li><a href="">DropDown Menu</a></li>
+      <li><a href="">DropDown Menu</a></li>
+    </ul>
+  </div>
 </div>
 <div class="dropdown">
     <a class="btn primary" href="">DropDown</a>
