refactor top page

--- a/docs/layouts/partials/parts/list.html
+++ b/docs/layouts/partials/parts/list.html
@@ -131,6 +131,12 @@
     <li>ああああ</li>
 </ul>
 
+<ul class="textList">
+  <li>テキストテキストテキスト</li>
+  <li>テキストテキストテキスト</li>
+  <li>テキストテキストテキスト</li>
+</ul>
+
 <ul class="thumbnailList">
     <li>
         <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama" /></p>
@@ -169,3 +175,23 @@
     <li></li>
     <li></li>
 </ol>
+
+
+<ul class="pictureList">
+  <li>
+    <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+    <p class="title picture">Atomic Design<br>APB CSS</p>
+    <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+  </li>
+  <li>
+    <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+    <p class="title picture">Atomic Design<br>APB CSS</p>
+    <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+  </li>
+  <li>
+    <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+    <p class="title picture">Atomic Design<br>APB CSS</p>
+    <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+  </li>
+</ul>
+
