--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -1,205 +1,125 @@
 {{ partial "header.html" . }}
 <section id="top">
-  <div class="container">
+  <div class="topView">
 
-    <h2 class="title">ボタン (Wrap Style)</h2>
-    {{ partial "parts/btn.html" . }}
+    <div class="mainView">
+      <p class="picture"><img src="img/top/logo_main.png" width="600" alt=""/></p>
+      <p class="text large center docsTop description">APB CSS (Atomic Parts Base CSS) + JavaScript framework.</p>
 
-    <p class="btn" data-ap-scroll="#scroll">
-      <a href="">スクロールトリガー</a>
-    </p>
+      <ui class="btnList center">
+        <li class="btn primary large"><a href="">Download Atomic Package</a></li>
+      </ui>
 
-    <p class="btn green" data-ap-scroll="400">
-      <a href="">スクロールトリガー2</a>
-    </p>
+      <ul class="textList blue center">
+        <li>テキストテキストテキスト</li>
+        <li>テキストテキストテキスト</li>
+        <li>テキストテキストテキスト</li>
+      </ul>
 
-    <h2 class="title">テキスト</h2>
-    {{ partial "parts/paragraph.html" . }}
-
-    <h2 class="title">タイトル</h2>
-    {{ partial "parts/title.html" . }}
-
-    <h2 class="title">メニュー</h2>
-    {{ partial "parts/menu.html" . }}
-
-    <h3 class="title">ページネーション</h3>
-    {{ partial "parts/pagination.html" . }}
-
-    <h3 class="title">タブメニュー</h3>
-    {{ partial "parts/tab_menu.html" . }}
-
-    <h3 class="title">ドロップダウン</h3>
-
-    <div data-ap-dropdown>
-      <div>トリガーボタン</div>
-
-      <div class="dropdown">ドロップダウンコンテンツ</div>
+      <ul class="textList blue center">
+        <li>テキストテキストテキスト</li>
+        <li>テキストテキストテキスト</li>
+        <li>テキストテキストテキスト</li>
+      </ul>
     </div>
 
+    <div class="featuresView blue">
+      <div class="wrap">
 
-    <h2>アイコン</h2>
+        <h3 class="title big center docsTop">Features</h3>
 
-    <p class="icon"></p>
+        <p class="text center large docsTop description">Atomic-PackageはあなたのHTML、CSS、およびJSコンポーネントの包括的なコレクションを提供します<br>
+          これはカスタマイズが容易で拡張、使用するのは簡単です。</p>
 
-    <p class="icon"></p>
-
-    <p class="icon"></p>
-
-    <p class="icon"></p>
-
-    <p class="icon"></p>
-
-    <p class="icon"></p>
-
-    <p class="icon"></p>
-
-    <p class="icon batch"></p>
-
-    <h2 class="title">サムネイル</h2>
-    {{ partial "parts/thumbnail.html" . }}
-
-    <br/><br/>
-
-    <h2 class="title">ボックス</h2>
-    {{ partial "parts/box.html" . }}
-
-    <h2 class="title">フォーム</h2>
-    {{ partial "parts/form.html" . }}
-
-    <h2 class="title">リスト</h2>
-    {{ partial "parts/list.html" . }}
-
-    <h2 class="title">テーブル</h2>
-    {{ partial "parts/table.html" . }}
-
-    <h2 class="title">アラート</h2>
-    {{ partial "parts/alert.html" . }}
-
-    <h2 class="title">toggle</h2>
-    <a href="" data-ap-toggle="#toggleContents">トグル</a>
-
-    <p data-ap-toggle="#toggleContents">トグル2</p>
-
-    <div id="toggleContents">
-      トグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツトグルコンテンツ
-    </div>
-
-    <h2 class="title">switcher</h2>
-
-    <ul class="switcher" data-ap-switcher="#switcherContents">
-      <li><a href="">switcher001</a></li>
-      <li>switcher002</li>
-      <li><a href="">switcher003</a></li>
-      <li>
-        <div>switcher004</div>
-        <a href=""></a>
-
-        <p></p>
-      </li>
-    </ul>
-
-    <ul class="switcher" data-ap-switcher="#switcherContents">
-      <li><a href="">switcher001</a></li>
-      <li>switcher002</li>
-      <li><a href="">switcher003</a></li>
-      <li>
-        <div>switcher004</div>
-        <a href=""></a>
-
-        <p></p>
-      </li>
-    </ul>
-
-    <ul class="switcher" data-ap-switcher>
-      <li></li>
-    </ul>
-
-    <div class="switcherContents" id="switcherContents">
-      <div>ああああああ</div>
-      <div>いいいいいい</div>
-      <div>ううううう</div>
-      <div>えええええ</div>
-    </div>
-
-
-    <p data-ap-side="#sideMenu">サイドメニュー</p>
-
-    <div class="sideMenu" id="sideMenu">
-      <p>あああああああああ</p>
-
-      <p>いいいいいいいいいい</p>
-    </div>
-
-    <style>
-      .switcherContents > div {
-        display: none;
-      }
-
-      .switcherContents > .show {
-        display: block;
-      }
-
-      #toggleContents.active {
-        font-size: 20px;
-      }
-
-      .sideMenu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background: #ccc;
-        display: none;
-      }
-
-      .sideMenu.active {
-        display: block;
-      }
-    </style>
-
-    <h2 class="title">アイコン</h2>
-    {{ partial "parts/icon.html" . }}
-
-    <h2 class="title">モーダルウィンドウ</h2>
-
-    <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
-
-    {{ partial "parts/modalwindow.html" . }}
-
-    <h2 class="title">ヘッダー</h2>
-    <header class="header">
-      <p class="logo main"></p>
-    </header>
-
-
-    <h2 class="title">フッター</h2>
-
-    <!--<div class="modalWindow"></div>-->
-
-    <div class="modalWindow" id="modalWindow">
-      <div class="modalDialog">
-        <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
-
-        <div>コンテンツ</div>
+        <ul class="pictureList">
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">UI Parts<br>Components</p>
+            <p class="text picture">汎用性のある、UI Partsのコンポーネントが用意されています。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Customize</p>
+            <p class="text picture">テーマファイルを独自に作成することによって、カスタマイズも容易におこなえます。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+        </ul>
       </div>
     </div>
 
-    <div id="scroll"></div>
+    <div class="featuresView">
+      <div class="wrap">
 
-    <footer class="footer">
+        <h3 class="title big center docsTop">Features</h3>
 
-    </footer>
+        <p class="text docsTop description"></p>
 
-    <!--<div id="primary" class="content-area">-->
-      <!--<div id="content" class="site-content" role="main">-->
+        <ul class="pictureList">
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Responsive</p>
+            <p class="text picture">レスポンシブデザインにも対応しているので、スマートフォンサイトでも利用が可能です。</p>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-        <!--{{ range first 10 (where .Data.Pages "Section" "post") }}-->
-        <!--{{ partial "content.html" . }}-->
-        <!--{{ end }}-->
+    <div class="featuresView blue">
+      <div class="wrap">
 
-      <!--</div>-->
-      <!--&lt;!&ndash; #content &ndash;&gt;-->
-    <!--</div>-->
-    <!-- #primary -->
+        <h3 class="title big center docsTop">Features</h3>
+
+        <p class="text docsTop description"></p>
+
+        <ul class="pictureList">
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+          <li>
+            <p class="picture"><img src="img/top/pic_feature_01.png" alt=""/></p>
+            <p class="title picture">Atomic Design<br>APB CSS</p>
+            <p class="text picture">APBCSSをベースに作成されたパッケージなので、APBCSSのアーキテクチャを容易に導入することが可能です。</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
   <!-- #main-content -->
 </section>
