--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
-  <meta charset="utf-8">
-
   {{ partial "meta.html" . }}
 
   <base href="{{ .Site.BaseURL }}">
   <title>Atomic Package - APBCSS UIPackage</title>
+
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}
   <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>
@@ -15,8 +14,9 @@
   {{ partial "head_includes.html" . }}
 </head>
 <body lang="ja">
-  <header class="apDocsHeader">
+  <header class="header docs">
     <div class="wrap">
+      <h1 class="headerLogo"><a href="/"><img src="img/top/logo_main.png" width="80" alt=""/></a></h1>
       {{ partial "header_menu.html" . }}
     </div>
   </header>
