--- a/scss/atomic-package/parts/_navigation_menu.scss
+++ b/scss/atomic-package/parts/_navigation_menu.scss
@@ -614,6 +614,13 @@ $navLofty: 50px;
       border-top-color: rgba(0,0,0,.2);
       box-shadow: inset 0 2px 4px rgba(0,0,0,.1);
     }
+
+    .title.sub {
+      display: block;
+      margin-top: -10px;
+      font-size: 12px;
+      line-height: 1;
+    }
   }
 }
 
