refactor docs core page

--- a/docs/layouts/partials/header_docs.html
+++ b/docs/layouts/partials/header_docs.html
@@ -15,8 +15,9 @@
   {{ partial "head_includes.html" . }}
 </head>
 <body lang="ja">
-  <header class="apDocsHeader">
+  <header class="header docs">
     <div class="wrap">
+      <h1 class="headerLogo"><a href="/"><img src="img/top/logo_main.png" width="80" alt=""/></a></h1>
       {{ partial "header_menu.html" . }}
     </div>
   </header>
