refactor docs pages

--- a/docs/layouts/_default/single.html
+++ b/docs/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ partial "header_docs.html" . }}
 
-<div class="site-content">
+<div class="contents site">
   <h1>{{ .Title }}{{ with .Section }} [<a href="/{{ . }}/">{{ . }}</a>]{{ end }}</h1>
 
 
