--- a/docs/layouts/core/single.html
+++ b/docs/layouts/core/single.html
@@ -1,6 +1,6 @@
 {{ partial "header_docs.html" . }}
 
-<div id="corePage" class="site-content">
+<div id="corePage" class="contents site">
   <nav>
     {{ with .Params.categories }}
     <div>Categories:{{ range . }} <a href="/categories/{{ . }}/">{{ . }}</a>{{ end }}</div>
