--- a/scss/atomic-package-docs/_common_inc.scss
+++ b/scss/atomic-package-docs/_common_inc.scss
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-//@import "base/setting";
-//@import "base/mixin";
-//@import "base/reset";
-//@import "base/base";
+@import "base/setting";
+@import "base/mixin";
+@import "base/base";
