--- a/scss/atomic-package-docs/parts/_list.scss
+++ b/scss/atomic-package-docs/parts/_list.scss
@@ -1,57 +1,13 @@
 .docsHeaderMenuList {
+  @include clearfix;
   float: right;
   padding: 20px;
-  &::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
+
   li {
     float: left;
     padding: 0 10px;
     a {
       color: #fff;
     }
-  }
-}
-
-.site-content {
-  width: 1100px;
-  min-height: 600px;
-  margin: 0 auto;
-  padding-top: 40px;
-  &::after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  .contents.docs {
-    margin-left: 250px;
-  }
-}
-
-.sideMenu.docs {
-  float: left;
-  width: 250px;
-}
-
-.times.docs {
-  text-align: right;
-}
-
-.contents.docs {
-  > h2 {
-    margin-bottom: 10px;
-    font-size: 36px;
-    line-height: 42px;
-  }
-  > h3 {
-    margin-bottom: 10px;
-    font-size: 24px;
-    line-height: 1.5;
-  }
-  > p {
-    margin-bottom: 10px;
-    line-height: 1.6;
   }
 }
