refactor hr style

--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -162,37 +162,19 @@ a {
   - Media Queries Style
  **
 ***/
-/* Bg Style
+/* Base Style
 -------------------------------------------------- */
-/* Header Style
--------------------------------------------------- */
-.header .headerLogo {
-  height: 100%;
-}
-
-.header .headerLogo a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 100%;
-}
-
-/* Footer Style
--------------------------------------------------- */
-footer {
-  /* Atomic */
-}
-
-footer.footer {
-  padding: 20px 0;
-  border-top: #333 1px solid;
-}
-
-footer.footer .text.copy {
-  text-align: center;
+:not(pre) > code,
+:not(pre) > kbd,
+:not(pre) > samp {
+  font-size: 12px;
+  font-family: Consolas,monospace,serif;
+  color: #D05;
+  white-space: nowrap;
+  padding: 0 4px;
+  border: 1px solid #E5E5E5;
+  border-radius: 3px;
+  background: #fafafa;
 }
 
 /* Paragraph style
@@ -634,19 +616,6 @@ img.thumbnail.free.round {
   color: #D85030;
 }
 
-:not(pre) > code,
-:not(pre) > kbd,
-:not(pre) > samp {
-  font-size: 12px;
-  font-family: Consolas,monospace,serif;
-  color: #D05;
-  white-space: nowrap;
-  padding: 0 4px;
-  border: 1px solid #E5E5E5;
-  border-radius: 3px;
-  background: #fafafa;
-}
-
 .picture {
   text-align: center;
 }
@@ -658,7 +627,6 @@ img.thumbnail.free.round {
 */
 /* Atomic */
 .title {
-  line-height: 1.4;
   /* Skin */
   /* Skin */
   /* State*/
@@ -712,13 +680,7 @@ img.thumbnail.free.round {
 /* Atomic */
 h1.title {
   font-size: 28px;
-  /* Atomic */
-  /* Atomic */
   /* State  Size */
-}
-
-h1.title .mainLogo {
-  float: left;
 }
 
 h1.title.mini {
@@ -845,6 +807,10 @@ h6.title.large {
 
 h6.title.big {
   font-size: 32px;
+}
+
+h1.title, h2.title, h3.title, h4.title, h5.title, h6.title {
+  line-height: 1.5;
 }
 
 /* Navigation & Menu Style
@@ -5258,6 +5224,53 @@ input.btn.lofty {
 /*
  * Separate Style
 */
+hr, .hr {
+  border-bottom: #E5E5E5 1px solid;
+  /* State */
+  /* Size */
+  /* Skin */
+}
+
+hr.double, .hr.double {
+  border: #E5E5E5 1px double;
+}
+
+hr.dotted, .hr.dotted {
+  border-bottom: #E5E5E5 1px dotted;
+}
+
+hr.dashed, .hr.dashed {
+  border-bottom: #E5E5E5 1px dashed;
+}
+
+hr.large, .hr.large {
+  border-width: 2px;
+}
+
+hr.big, .hr.big {
+  border-width: 4px;
+}
+
+hr.primary, .hr.primary {
+  border-color: #2C3D50;
+}
+
+hr.blue, .hr.blue {
+  border-color: #3598DB;
+}
+
+hr.green, .hr.green {
+  border-color: #17BC9C;
+}
+
+hr.orange, .hr.orange {
+  border-color: #F39C12;
+}
+
+hr.red, .hr.red {
+  border-color: #E74C3C;
+}
+
 /* Form Style
 -------------------------------------------------- */
 /*
@@ -5375,6 +5388,39 @@ input[type="password"] {
 /* input class style */
 .input {
   display: inline-block;
+}
+
+/* Bg Style
+-------------------------------------------------- */
+/* Header Style
+-------------------------------------------------- */
+.header .headerLogo {
+  height: 100%;
+}
+
+.header .headerLogo a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 100%;
+}
+
+/* Footer Style
+-------------------------------------------------- */
+footer {
+  /* Atomic */
+}
+
+footer.footer {
+  padding: 20px 0;
+  border-top: #333 1px solid;
+}
+
+footer.footer .text.copy {
+  text-align: center;
 }
 
 /* Animation Style
