--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -25,7 +25,7 @@ $colorBorderOrange: #CB8618;
 $colorBorderRed: #DD8177;
 
 $colorHoverDefault: #F5F5F5;
-$colorHoverPrimary: #76828D;
+$colorHoverPrimary: #5F6C78;
 $colorHoverGreen: #69D3BF;
 $colorHoverBlue: #7BBCE8;
 $colorHoverOrange: #F7BF65;
