refactor base url

--- a/docs/layouts/partials/head_includes.html
+++ b/docs/layouts/partials/head_includes.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link href="./css/atomic-package.min.css" rel="stylesheet" type="text/css" media="screen" />
-<link href="./css/atomic-package-docs.min.css" rel="stylesheet" type="text/css" media="screen" />
-<script src="./js/atomic-package.js"></script>
+<link rel="shortcut icon" href="{{ .Site.BaseURL }}img/favicon.ico" type="image/x-icon">
+<link href="{{ .Site.BaseURL }}css/atomic-package.min.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="{{ .Site.BaseURL }}css/atomic-package-docs.min.css" rel="stylesheet" type="text/css" media="screen" />
+<script src="{{ .Site.BaseURL }}js/atomic-package.js"></script>
