--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -8,7 +8,7 @@
 
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}
-  <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>
+  <!--<link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}"/>-->
   {{ end }}
 
   {{ partial "head_includes.html" . }}
@@ -16,7 +16,7 @@
 <body lang="ja">
   <header class="header docs">
     <div class="wrap">
-      <h1 class="headerLogo"><a href="/"><img src="img/top/logo_main.png" width="80" alt=""/></a></h1>
+      <h1 class="headerLogo"><a href="/"><img src="/img/top/logo_main.png" width="80" alt=""/></a></h1>
       {{ partial "header_menu.html" . }}
     </div>
   </header>
