--- a/docs/layouts/partials/header_docs.html
+++ b/docs/layouts/partials/header_docs.html
@@ -5,7 +5,7 @@
 
   {{ partial "meta.html" . }}
 
-  <!--<base href="{{ .Site.BaseURL }}">-->
+  <base href="{{ .Site.BaseURL }}">
   <title>{{ .Title }} - Atomic Package</title>
   <link rel="canonical" href="{{ .Permalink }}">
   {{ if .RSSlink }}
@@ -18,7 +18,7 @@
 <body lang="ja">
   <header class="header docs">
     <div class="wrap">
-      <h1 class="headerLogo"><a href="/"><img src="img/top/logo_main.png" width="80" alt=""/></a></h1>
+      <h1 class="headerLogo"><a href="/"><img src="/img/top/logo_main.png" width="80" alt=""/></a></h1>
       {{ partial "header_menu.html" . }}
     </div>
   </header>
